<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="7" >

    <TextView
        android:id="@+id/textView1"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_row="0"
        android:text="@string/course" />

    <TextView
        android:id="@+id/textView2"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="0"
        android:text="@string/exams" />

    <TextView
        android:id="@+id/textView3"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="2"
        android:text="@string/students" />

    <TextView
        android:id="@+id/textView4"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="2"
        android:text="@string/projects" />

    <TextView
        android:id="@+id/textView5"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_row="4"
        android:text="@string/daysamount" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="121dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_row="1" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="120dp"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="1" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="60dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_row="3"
        android:ems="10" >

    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="60dp"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="3"
        android:ems="10" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="60dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_row="5"
        android:ems="10" />

    <Button
        android:id="@+id/exam_done"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="6"
        android:text="@string/done" />

    <Button
        android:id="@+id/exam_add"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_row="6"
        android:text="@string/add" />

</GridLayout>