<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/olcScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:orientation="horizontal"
    android:rowCount="4" >

    <TextView
        android:id="@+id/olc_tvClass"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left|center_vertical"
        android:layout_row="0"
        android:text="@string/course" />

    <Button
        android:id="@+id/olc_btnAdd"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_vertical"
        android:layout_row="3"
        android:text="@string/add" />

    <EditText
        android:id="@+id/olc_etHours"
        android:layout_width="76dp"
        android:layout_height="52dp"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|left"
        android:layout_marginTop="20dp"
        android:layout_row="2"
        android:ems="10"
        android:hint="@string/lek" >

    </EditText>

    <Button
        android:id="@+id/olc_btnDone"
        android:layout_column="2"
        android:layout_gravity="right|center_vertical"
        android:layout_row="3"
        android:text="@string/done" />

    <TextView
        android:id="@+id/olc_tvHours"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:text="@string/hrs" />

    <Spinner
        android:id="@+id/olc_edu"
        android:layout_width="138dp"
        android:layout_height="89dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="2" />

</GridLayout>