<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="7" >

    <TextView
        android:id="@+id/textView1"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginBottom="20dp"
        android:layout_row="1"
        android:text="@string/holiday" />

    <TextView
        android:id="@+id/textView2"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginBottom="20dp"
        android:layout_row="2"
        android:text="@string/vacation" />

    <TextView
        android:id="@+id/textView3"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginBottom="20dp"
        android:layout_row="3"
        android:text="@string/absence" />

    <TextView
        android:id="@+id/textView4"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_row="4"
        android:text="@string/timeEst" />

    <TextView
        android:id="@+id/textView5"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="0"
        android:gravity="center_horizontal"
        android:text="@string/days" />

    <EditText
        android:id="@+id/day_etHoliday"
        android:layout_width="60dp"
        android:layout_marginBottom="20dp"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="1"
        android:inputType="number"
        android:ems="10" />

    <EditText
        android:id="@+id/day_etVaction"
        android:layout_width="60dp"
        android:layout_marginBottom="20dp"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="2"
        android:inputType="number"
        android:ems="10" />

    <EditText
        android:id="@+id/day_etAbsence"
        android:layout_width="60dp"
        android:layout_marginBottom="20dp"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="3"
        android:inputType="number"
        android:ems="10" />

    <EditText
        android:id="@+id/day_etTimeEst"
        android:layout_width="60dp"
        android:layout_marginBottom="20dp"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="4"
        android:inputType="number"
        android:ems="10" />

    <Button
        android:id="@+id/day_btnSave"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_row="5"
        android:text="@string/save" />

</GridLayout>